--- a/TravelPackage/TravelPackage/Content/Site.css
+++ b/TravelPackage/TravelPackage/Content/Site.css
@@ -6,7 +6,7 @@
 
 p{
     font-family:'Century Gothic', Arial, sans-serif;
-    font-size:15px;
+    font-size:16px;
 }
 h1{
     
@@ -176,6 +176,7 @@ img.about{
 .container.about{
     padding-top:1%;
     background-color:#e5e5e5;
+    transform: translateY(10%);
 }
 /*clients*/
 .container.clients{
