--- a/TravelPackage/TravelPackage/Views/Shared/_Layout.cshtml
+++ b/TravelPackage/TravelPackage/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
+                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -36,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Real Breeze Travel and Tours - Philippines</p>
+            <p>&copy; @DateTime.Now.Year - ZeeIT Technologies</p>
         </footer>
     </div>
 
