--- a/TravelPackage/TravelPackage/Content/Site.css
+++ b/TravelPackage/TravelPackage/Content/Site.css
@@ -105,19 +105,16 @@ h3.services{
 }
 
 .col-sm-9.services{
-    padding:5%;
+    padding:2%;
 }
 
 /*Projects*/
 
-div{
-    /*border:1px solid;*/
-}
 
 img.projects {
     text-align:right;
     display: block;
-    margin: 0 auto;
+    margin: 10px auto;
     width:100%;
     height:100%;
     height:80px;
@@ -125,34 +122,27 @@ img.projects {
     align-content:stretch;
 }
 
-.col-sm-12.projects{
-    margin:0%;
-    margin-left:10px;
+.col-sm-3.projects{
+    margin-top:10px;
+    padding:0;
 }
 
 
-.col-sm-12.projects-desc{
-    border:1px solid lightgray;
+h4.projects{
+    font-weight:bold;
+    color:#58595a;
+    text-align:center;
+    margin-top:10px;
+    font-size:16px;
+    margin-bottom:15px;
+    font-family:'Century Gothic', Arial, sans-serif;
 }
 
-
-h3.projects{
-    color:deepskyblue;
-    text-align:left;
-}
-
-
-
-h2.projects{
-    color:deepskyblue;
-    text-align:left;
-    margin-top:1%;
-}
-
-.container-fluid.projects{
-    background-color:#e5e5e5;
+.container.projects{
     padding-top:1%;
     padding-bottom:5%;
+    background-color:#e5e5e5;
+    border-radius:10px;
 }
 
 /*about*/
@@ -177,6 +167,7 @@ img.about{
     padding-top:1%;
     background-color:#e5e5e5;
     transform: translateY(10%);
+    border-radius:10px;
 }
 /*clients*/
 .container.clients{
