--- a/TravelPackage/TravelPackage/Views/Home/Index.cshtml
+++ b/TravelPackage/TravelPackage/Views/Home/Index.cshtml
@@ -16,8 +16,6 @@
 <!--Services -->
 <div class="container">
     <h1 class="Title">Services</h1>
-    <div class="row">
-
         @foreach (var item in Model)
         {
         <div class="col-sm-6 services">
@@ -32,78 +30,111 @@
             </div>
         </div>
         }
-    </div>
 </div>
 
 <!--Projects-->
-<div class="container-fluid projects">
-    <h1 class="Title">Projects</h1>
+<div class="container projects">
     <div class="row">
-        <div class="col-sm-12 projects">
+        <h1 class="Title">Sample Projects</h1>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 projects">
             <div class="row">
-                <div class="col-sm-3">
-
-                    <img class="projects" src="~/Images/misc/lab.png" />
+                <div class="col-sm-12">
+                    <img class="projects" src="~/Images/misc/car2.png" />
                 </div>
-
-                <div class="col-sm-6 projects-desc">
-                    <h2 class="projects">Laboratory Information System</h2>
-                    <p>
-                        Manages the scheduling and updates of
-                        laboratory appointments with automated
-                        SMS System to notify all contact persons.
-                    </p>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="projects">Booking System</h4>
                 </div>
             </div>
         </div>
-
-
-        <div class="col-sm-12  projects">
+        <div class="col-sm-3 projects">
             <div class="row">
-
-                <div class="col-sm-3">
-                    <img class="projects" src="~/Images/misc/trolley.png" />
+                <div class="col-sm-12">
+                    <img class="projects" src="~/Images/misc/job.png" />
                 </div>
-
-                <div class="col-sm-6 projects-desc">
-                    <h2 class="projects">Inventory System</h2>
-                    <p>
-                        A customized Inventory System that handles the 
-                        products of the company and provide updates to 
-                        the company branches and offices.
-
-                    </p>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="projects">Jobs Management System</h4>
                 </div>
             </div>
         </div>
-
-        <div class="col-sm-12 projects">
+        <div class="col-sm-3 projects">
             <div class="row">
-
-                <div  class="col-sm-3">
+                <div class="col-sm-12">
                     <img class="projects" src="~/Images/misc/web.png" />
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="projects">RealBreeze Website</h4>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3 projects">
+            <div class="row">
+                <div class="col-sm-12">
+                    <img class="projects" src="~/Images/misc/car.png" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="projects">AJ88 Car Rental Website</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 projects">
+            <div class="row">
+                <div class="col-sm-12">
+                    <img class="projects" src="~/Images/misc/lab.png" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="projects">Laboratory Information System</h4>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3 projects">
+            <div class="row">
+                <div class="col-sm-12">
+                    <img class="projects" src="~/Images/misc/trolley.png" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="projects">Inventory System</h4>
+                </div>
+            </div>
+        </div>
 
-                <div class="col-sm-6 projects-desc">
-                    <h2 class="projects">Realbreeze Davao Website</h2>
-                    <p>
-                        Realbreeze Travel and Tours website located in Davao City.
-                        They off tour packages, ticketing, car rental and other services
-
-                    </p>
+        <div class="col-sm-3 projects">
+            <div class="row">
+                <div class="col-sm-12">
+                    <img class="projects" src="~/Images/misc/coins.png" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="projects">Basic Accounting System</h4>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+        
 
 <!--Clients-->
 <div class="container clients">
 
     <div class="row">
 
-        <h1 class="Title">Clients</h1>
+        <h1 class="Title">Our Clients</h1>
 
         <div class="col-sm-4">
             <a href="http://realbreezedavaotours.com/"><img  class="client-img" src="~/Images/misc/realbreeze_logo.png" /></a>
