--- a/TravelPackage/TravelPackage/Views/Shared/_Layout.cshtml
+++ b/TravelPackage/TravelPackage/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                     @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
                     @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
@@ -43,9 +43,9 @@
     <div class="navbar navbar-inverse navbar-fixed-bottom callbutton">
         <div class="container">
             <div class="navbar-header">
-                <a href="tel:+639167558473" class="navbar-brand">CALL</a>
-                <a href="sms://+639167558473" class="navbar-brand">SMS</a>
-                <a href="mailto:RealBreezeDavao@gmail.com?Subject=Travel%20Package%20Inquiry" target="_top" class="navbar-brand">Email</a>
+                <a href="tel:+639654508517" class="navbar-brand">CALL</a>
+                <a href="sms://+639654508517" class="navbar-brand">SMS</a>
+                <a href="mailto:zeeitdavao@gmail.com?Subject=ZeeIT%20Davao%20Inquiry" target="_top" class="navbar-brand">Email</a>
             </div>
         </div>
     </div>
@@ -53,9 +53,8 @@
         <div class="container">
             <div class="navbar-header">
                 Contact:
-                <a href="tel:+639090761575" class="navbar-brand">(+63)909-076-1575</a>;
-                <a href="tel:+639167558473" class="navbar-brand">(+63)916-755-8473</a>;
-                Email<a href="mailto:RealBreezeDavao@gmail.com?Subject=Travel%20Package%20Inquiry" target="_top" class="navbar-brand">Email: RealBreezeDavao@Gmail.com</a>
+                <a href="tel:+639654508517" class="navbar-brand">(+63)995-450-8517</a>;
+                Email<a href="mailto:zeeitdavao@gmail.com?Subject=ZeeIT%20Davao%20Inquiry" target="_top" class="navbar-brand">Email: zeeitdavao@Gmail.com</a>
             </div>
         </div>
     </div>
