--- a/TravelPackage/TravelPackage/Content/Site.css
+++ b/TravelPackage/TravelPackage/Content/Site.css
@@ -123,10 +123,18 @@ img.projects {
 }
 
 .col-sm-3.projects{
-    margin-top:10px;
-    padding:0;
+    background-color:white;
+    margin:10px;
+    width:250px;
+    padding:10px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    border-radius:5px;
 }
 
+.col-sm-3.projects:hover {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
 
 h4.projects{
     font-weight:bold;
@@ -139,11 +147,13 @@ h4.projects{
 }
 
 .container.projects{
+    padding-left:4%;
     padding-top:1%;
     padding-bottom:5%;
-    background-color:#e5e5e5;
     border-radius:10px;
 }
+
+
 
 /*about*/
 p.about{
