--- a/TravelPackage/TravelPackage/Views/Home/Index.cshtml
+++ b/TravelPackage/TravelPackage/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
 
         <div class="col-sm-6 services">
             <div class="col-sm-3">
-                <img class="services-img" src="~/Images/icons/web.png">
+                <img class="services-img" src="~/Images/icons/html.png">
             </div>
             <div class="col-sm-9 services">
                 <h3 class="services">Web Development</h3>
